--- a/ECommerce/Views/Category/Index.cshtml
+++ b/ECommerce/Views/Category/Index.cshtml
@@ -12,6 +12,7 @@
 <form>
     <input type="number" id="CategoryId" />
     <input type="text" id="ProductName"/>
+    <input type="text" id="ProductDescription" />
     <input type="button" value="Kaydet" onclick="ECommerce.Page.Category.Save();"/>
 </form>
 
