--- a/ECommerce/Views/Product/Index.cshtml
+++ b/ECommerce/Views/Product/Index.cshtml
@@ -6,4 +6,4 @@
 <br />
 <strong>Açıklama: </strong>@Model.Description
 <br />
-<input type="button" value="Güncellemek İçin Tıkla" onclick="" />
+<a href="/urun/@Model.Id/guncelle"><input type="button" value="Güncellemek İçin Tıkla" /></a>
