--- a/ECommerce/Views/Product/Update.cshtml
+++ b/ECommerce/Views/Product/Update.cshtml
@@ -2,7 +2,7 @@
 @{
     await Html.RenderPartialAsync("_Partial_Categories");
 }
-<input type="hidden" id="ProdcutId" value="@Model.Id" />
+<input type="hidden" id="ProductId" value="@Model.Id" />
 <strong>Ürün Adı: </strong><input id="ProductName" type="text" value="@Model.Name" />
 <br />
 <strong>Açıklama: </strong><input id="ProductDesc" type="text" value="@Model.Description" />
