--- a/ECommerce/Views/Home/Index.cshtml
+++ b/ECommerce/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Category>
+﻿@model List<ECommerce.Data.Models.Category>
 içerik
 <p>
     <a href="@Url.Action("Help", "Home")">Yardım Masasına Git</a>
