--- a/ECommerce/Views/Shared/_Partial_Categories.cshtml
+++ b/ECommerce/Views/Shared/_Partial_Categories.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
     List<Category> categories = new List<Category>();
-    using (ECommerceContext eCommerceContext = new ECommerceContext())
+    using (ECommerce.Data.ECommerceContext eCommerceContext = new ECommerce.Data.ECommerceContext())
     {
         categories = eCommerceContext.Categories.ToList();
 
